# octoprint_penploter

./: LICENSE  README.md  handwriting_fonts.json  index.html  pyproject.toml  reddit_diy_post.txt  reddit_post.txt  test_ui.html
OctoPrint_PlotterHandwriting.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
octoprint_plotterhandwriting/: __init__.py
octoprint_plotterhandwriting/static/css/: plotterhandwriting.css
octoprint_plotterhandwriting/static/js/: finlay_handwriting.json  hershey_fonts.js  plotterhandwriting.js
octoprint_plotterhandwriting/templates/: plotterhandwriting_tab.jinja2
