[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-PlotterHandwriting"
version = "0.1.0"
description = "A plugin for OctoPrint to generate organic, human-looking handwriting G-code for pen plotters."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = [
    "OctoPrint>=1.8.0",
]

[project.entry-points."octoprint.plugin"]
plotterhandwriting = "octoprint_plotterhandwriting"

[tool.setuptools.packages.find]
where = ["."]
include = ["octoprint_plotterhandwriting*"]

[tool.setuptools.package-data]
octoprint_plotterhandwriting = ["templates/*", "static/**/*"]
